<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kinova_bridge</name>
  <version>0.0.1</version>
  <description>A kinova bridge between ROS 1 and ROS 2</description>
  <maintainer email="vinnam.kim@gmail.com">Vinnam Kim</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>pkg-config</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <buildtool_export_depend>pkg-config</buildtool_export_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
